# linux-audit-mcp

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md
src/: anomaly.rs  audit.rs  catalog.rs  cli.rs  config.rs  evals.rs  history.rs  main.rs  report.rs  run.rs  scoring.rs  server.rs  ssh.rs
src/checks/: accounts.rs  firewall.rs  kernel.rs  logging.rs  mod.rs  parse.rs  services.rs  ssh.rs  updates.rs
src/health/: mod.rs  parse.rs  report.rs
tests/: mcp_stdio.rs
tests/fixtures/debian-default/: apt_get_s_upgrade.txt  cat_etc_login_defs.txt  cat_etc_ssh_sshd_config.txt  df_p.txt  expected.json  expected_health.json  free_b.txt  getent_passwd.txt  ps_eo_pid_comm_pcpu_pmem_sort_pcpu.txt  ss_s.txt  ss_tuln.txt  sudo_n_cat_etc_shadow.txt  sysctl_a.txt  systemctl_list_unit_files_type_service_no_pager.txt  uptime.txt  vmstat_1_2.txt
tests/fixtures/rocky-minimal/: cat_etc_login_defs.txt  cat_etc_ssh_sshd_config.txt  df_P.txt  expected.json  expected_health.json  free_b.txt  getent_passwd.txt  ps_eo_pid_comm_pcpu_pmem_sort_pcpu.txt  ss_s.txt  ss_tuln.txt  sudo_n_cat_etc_shadow.txt  sudo_n_nft_list_ruleset.txt  sudo_n_sshd_T.txt  sysctl_a.txt  systemctl_list_unit_files_type_service_no_pager.txt  uptime.txt  vmstat_1_2.txt
tests/fixtures/ubuntu-hardened/: cat_etc_login_defs.txt  cat_etc_ssh_sshd_config.txt  df_P.txt  expected.json  expected_health.json  free_b.txt  getent_passwd.txt  ps_eo_pid_comm_pcpu_pmem_sort_pcpu.txt  ss_s.txt  ss_tuln.txt  sysctl_a.txt  systemctl_list_unit_files_type_service_no_pager.txt  uptime.txt  vmstat_1_2.txt
