[package]
name = "linux-audit-mcp"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Read-only security audit MCP server for Linux servers"
authors = ["idesyatov"]
repository = "https://github.com/idesyatov/linux-audit-mcp"
license = "MIT"
readme = "README.md"

[dependencies]
# Official Rust SDK for the Model Context Protocol (stdio transport). Stage 1.
rmcp = { version = "2", features = ["server", "transport-io"] }

# Async runtime. The `process` feature is for SSH via subprocess (Stage 2).
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "process"] }

anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Client features are used only by the stdio integration test (tests/mcp_stdio.rs),
# which spawns the built server as a child process and speaks MCP to it.
[dev-dependencies]
rmcp = { version = "2", features = ["client", "transport-child-process"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
